# subsocia

./: .gitignore  .ocamlinit  CHANGES.md  Makefile  README.md  _oasis  _tags  dune  dune-project  dune-workspace.dev  jbuild  myocamlbuild.ml  ocsigen-dev.conf  ocsigen-dev.conf.ab  ocsigen-dev.conf.in  opam  subsocia.opam
.circleci/: config.yml  subsocia.conf
aux/vim/syntax/: subsocia.vim
lib/: _tags  dune  jbuild  lib-data.itarget  lib.itarget  subsocia.oclib  subsocia.olib  subsocia_attribution_sql.ml  subsocia_attribution_sql.mli  subsocia_client.ml  subsocia_client.mli  subsocia_common.ml  subsocia_common.mli  subsocia_derived.ml  subsocia_derived.mli  subsocia_derived_intf.mli  subsocia_direct.ml  subsocia_direct.mli  subsocia_direct_plugins.ml  subsocia_error.ml  subsocia_error.mli  subsocia_fts.ml  subsocia_fts.mli  subsocia_internal.ml  subsocia_intf.mli  subsocia_lexer.mll  subsocia_parser.mly  subsocia_prereq.ml  subsocia_prereq.mli  subsocia_re.ml  subsocia_re.mli  subsocia_rpc.ml  subsocia_rpc_client.ml  subsocia_rpc_client.mli  subsocia_rpc_primitives.ml  subsocia_rpc_server.ml  subsocia_rpc_server.mli  subsocia_rpc_types.ml  subsocia_schema.ml  subsocia_schema.mli  (+13 more)
lib-data/: dune  jbuild  subsocia_attribution_sql.ml  subsocia_attribution_sql.mli  subsocia_config.ml  subsocia_connection.ml  subsocia_connection.mli  subsocia_direct.ml  subsocia_direct.mli  subsocia_direct_intf.mli  subsocia_plugin.ml  subsocia_plugin.mli
lib/data/: subsocia-data.olib  subsocia_attribution_sql.ml  subsocia_attribution_sql.mli  subsocia_config.ml  subsocia_connection.ml  subsocia_connection.mli  subsocia_direct.ml  subsocia_direct.mli  subsocia_direct_intf.mli  subsocia_plugin.ml  subsocia_plugin.mli
lib/server/: subsocia_config.ml  subsocia_connection.ml  subsocia_direct.ml  subsocia_direct.mli  subsocia_plugin.ml
pkg/: META  pkg.ml  pkg_utils.ml
schema/: subsocia_core.sql  subsocia_core.sscm  subsocia_data.sql  subsocia_enums.edf  subsocia_logs.sql  subsocia_proc.sql  subsocia_tables.sql  subsocia_views.sql
schema/upgrade/: from-0.sql  from-1.sql  from-2.sql  from-3.sql  from-4.sql  from-5.sql  from-6.sql
tests/: dune  jbuild  stellar.t  subsocia-test.conf  teardown.ml  teardown.sql  test_attribution.ml  test_inclusion.ml  testsuite.ml
web/: _tags  sociaweb_content.eliom  sociaweb_entities.eliom  sociaweb_main.eliom  sociaweb_server.eliom  sociaweb_server.eliomi  sociaweb_services.eliom  subsocia_web.eliom
web/client/: sociaweb_app.ml
web/css/: subsocia.css
web/server/: sociaweb_auth.ml  sociaweb_auth.mli  sociaweb_connection.ml  sociaweb_debug.ml  sociaweb_registration.ml  sociaweb_request.ml  sociaweb_request.mli  sociaweb_restapi.ml  sociaweb_server.ml  subsocia-web-debug-module.olib  subsocia-web-module.oclib  subsocia-web-server.oclib
web/static/css/: subsocia.css
