opam-version: "2.0"
name: "subsocia"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3 with OCaml linking exception"
homepage: "https://github.com/paurkedal/subsocia/"
bug-reports: "https://github.com/paurkedal/subsocia/issues"
depends: [
  "ocaml"
  "caqti" {>= "0.6.0"}
  "caqti-dynload"
  "caqti-lwt"
  "cmdliner"
  "config-file"
  "extunix"
  "ocamlfind"
  "lwt"
  "lwt_ppx"
  "ounit"
  "panograph"
  "prime"
  "react"
  "uri"
  "yojson"
]
build: [
  ["jbuilder" "build" "-p" name "-j" jobs]
  ["jbuilder" "runtest" "-p" name "-j" jobs] {with-test}
]
substs: "lib/subsocia_version.ml"
dev-repo: "git+https://github.com/paurkedal/subsocia.git"
synopsis: "People, organizational data, and access control"
description: """
Subsocia implements a data model for organizational data and access control
based sub-classing and binary relations.  The sub-classing relation serves
to build organizational hierarchies.  The binary relations allows
associating attributes to an people relative to their different roles in the
organization, in ways that would be ambiguous in the common directory model.
"""
doc: "http://paurkedal.github.io/subsocia/index.html"
