opam-version: "2.0"
name: "subsocia"
maintainer: "Petter A. Urkedal <paurkedal@gmail.com>"
authors: "Petter A. Urkedal <paurkedal@gmail.com>"
license: "LGPL-3.0-or-later WITH LGPL-3.0-linking-exception"
homepage: "https://github.com/paurkedal/subsocia/"
bug-reports: "https://github.com/paurkedal/subsocia/issues"
depends: [
  "angstrom"
  "angstrom-lwt-unix"
  "caqti" {>= "1.8.0"}
  "caqti-dynload"
  "caqti-lwt"
  "cmdliner" {>= "1.1.0"}
  "config-file"
  "dune" {>= "1.1"}
  "extunix"
  "fmt"
  "iso639"
  "logs"
  "lwt"
  "lwt_ppx"
  "ocaml"
  "ounit"
  "prime"
  "ptime"
  "re"
  "uri"
  "yojson"
]
build: [
  ["dune" "build" "-p" name "-j" jobs]
  ["dune" "runtest" "-p" name "-j" jobs] {with-test}
]
substs: "lib/subsocia_version.ml"
dev-repo: "git+https://github.com/paurkedal/subsocia.git"
synopsis: "People, organizational data, and access control"
description: """
Subsocia implements a data model for organizational data and access control
based sub-classing and binary relations.  The sub-classing relation serves
to build organizational hierarchies.  The binary relations allows
associating attributes to an people relative to their different roles in the
organization, in ways that would be ambiguous in the common directory model.
"""
doc: "http://paurkedal.github.io/subsocia/index.html"
