(library
  (name subsocia_data)
  (public_name subsocia.data)
  (wrapped false)
  (modules_without_implementation
    Subsocia_direct_intf)
  (libraries
    caqti
    caqti-lwt
    config-file
    extunix
    findlib
    findlib.dynload
    iso639
    logs
    logs.lwt
    lwt
    subsocia
    prime.unstable
    ptime ptime.clock.os))
