(env
 (_
  (env-vars
    (PGDATABASE "")
    (PGHOST "")
    (PGPORT "")
    (PGUSER "")
    (CAQTI_DEBUG_PARAM "true")
    (SUBSOCIA_CONFIG "subsocia-test.conf")
    (SUBSOCIA_SHARE ".."))))

(rule
 (targets subsocia-test.conf)
 (mode fallback)
 (action
  (write-file %{targets}
    "database_uri = \"postgresql:///?schema=subsocia_test\"")))

;;; Setup and Tear Down of Test Database

(rule
 (alias setup)
 (deps
    ../schema/subsocia_proc.sql
    ../schema/subsocia_tables.sql
    ../schema/subsocia_views.sql
    ../schema/subsocia_core.sscm
    subsocia-test.conf)
 (action
  (progn
    (run %{dep:teardown.exe})
    (run %{dep:../bin/command.exe} db-init))))

(rule
 (alias teardown)
 (deps subsocia-test.conf)
 (action (run %{dep:teardown.exe})))

;;; Tests

(executables
  (names testsuite teardown)
  (preprocess (pps lwt_ppx))
  (libraries
    alcotest
    caqti-dynload
    subsocia
    subsocia.data))

(rule
  (alias runtest)
  (deps
    (alias setup)
    (:test testsuite.exe)
    subsocia-test.conf)
  (action (run %{test})))
