(env
 (_
  (env-vars
    (PGDATABASE "")
    (PGHOST "")
    (PGPORT "")
    (PGUSER "")
    (CAQTI_DEBUG_PARAM "true")
    (SUBSOCIA_CONFIG "subsocia-test.conf")
    (SUBSOCIA_SHARE ".."))))

(rule
 (targets subsocia-test.conf)
 (mode fallback)
 (action
  (write-file %{targets}
    "{database_uri: \"postgresql:///?schema=subsocia_test\"}")))

;;; Setup and Tear Down of Test Database

(rule
 (alias setup)
 (locks /db/subsocia_test)
 (deps
    ../schema/subsocia_proc.sql
    ../schema/subsocia_tables.sql
    ../schema/subsocia_views.sql
    ../schema/subsocia_core.sscm
    subsocia-test.conf)
 (action
  (progn
    (run %{dep:teardown.exe})
    (run %{bin:subsocia} db-init))))

(rule
 (alias teardown)
 (locks /db/subsocia_test)
 (deps subsocia-test.conf)
 (action (run %{bin:subsocia})))

;;; Tests

(executables
  (names testsuite teardown)
  (preprocess (pps lwt_ppx))
  (libraries
    alcotest
    caqti-dynload
    lwt
    lwt.unix
    subsocia
    subsocia.data
    unix))

(rule
  (alias runtest)
  (locks /db/subsocia_test)
  (deps
    (alias setup)
    (:test testsuite.exe)
    subsocia-test.conf)
  (action (run %{test})))

(cram
  (locks /db/subsocia_test)
  (deps
    ../schema/subsocia_proc.sql
    ../schema/subsocia_tables.sql
    ../schema/subsocia_views.sql
    ../schema/subsocia_core.sscm
    subsocia-test.conf
    teardown.exe
    %{bin:subsocia}))
